{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 234,
  "lineage": "b0ae921a-44f8-32d0-e2ae-934b3b5ef247",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "haidi-backend-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb78ed41348894ff",
            "association_id": "eipassoc-037f87f7a095ba742",
            "domain": "vpc",
            "id": "eipalloc-0cb78ed41348894ff",
            "instance": "i-07500660d575c8a40",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-001a56ebfc41b1aa1",
            "private_dns": "ip-10-0-0-192.eu-central-1.compute.internal",
            "private_ip": "10.0.0.192",
            "public_dns": "ec2-3-65-66-136.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.65.66.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.haidi-instance-profile",
            "aws_iam_role.haidi-iam-role",
            "aws_instance.haidi-backend-instance",
            "aws_key_pair.deployer",
            "aws_security_group.haidi-sg",
            "aws_subnet.haidi-sn-dmz",
            "aws_vpc.haidi-vpc",
            "data.aws_ami.haidi-linux-ami",
            "module.myip.data.http.ip_address"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "haidi-backend-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0877f03d05e19b075",
            "arn": "arn:aws:ec2:eu-central-1:214138175513:instance/i-07500660d575c8a40",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "haidi-instance-profile",
            "id": "i-07500660d575c8a40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "haidi-key-par-backend",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001a56ebfc41b1aa1",
            "private_dns": "ip-10-0-0-192.eu-central-1.compute.internal",
            "private_ip": "10.0.0.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025f622e4ff2b29f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-033d9ad6320ed7ce8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0409154b521451ada",
            "tags": {
              "Name": "haidi-backend-instance"
            },
            "tags_all": {
              "Name": "haidi-backend-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-033d9ad6320ed7ce8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.haidi-instance-profile",
            "aws_iam_role.haidi-iam-role",
            "aws_key_pair.deployer",
            "aws_security_group.haidi-sg",
            "aws_subnet.haidi-sn-dmz",
            "aws_vpc.haidi-vpc",
            "data.aws_ami.haidi-linux-ami",
            "module.myip.data.http.ip_address"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "haidi-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:214138175513:internet-gateway/igw-0a7806d6c8c32b227",
            "id": "igw-0a7806d6c8c32b227",
            "owner_id": "214138175513",
            "tags": {
              "Name": "haidi-igw"
            },
            "tags_all": {
              "Name": "haidi-igw"
            },
            "vpc_id": "vpc-002a5ec6001bf7a8f"
          },
          "dependencies": [
            "aws_vpc.haidi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "haidi-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:214138175513:route-table/rtb-05b582d858af12ca3",
            "id": "rtb-05b582d858af12ca3",
            "owner_id": "214138175513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7806d6c8c32b227",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "haidi-rt"
            },
            "tags_all": {
              "Name": "haidi-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-002a5ec6001bf7a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.haidi-igw",
            "aws_vpc.haidi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "haidi-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb592600b864fecd",
            "route_table_id": "rtb-05b582d858af12ca3",
            "subnet_id": "subnet-0409154b521451ada"
          },
          "dependencies": [
            "aws_internet_gateway.haidi-igw",
            "aws_route_table.haidi-rt",
            "aws_subnet.haidi-sn-dmz",
            "aws_vpc.haidi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "haidi-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:214138175513:security-group/sg-033d9ad6320ed7ce8",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033d9ad6320ed7ce8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend from VPC",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              },
              {
                "cidr_blocks": [
                  "95.112.75.188/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "haidi-sg",
            "name_prefix": "",
            "owner_id": "214138175513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haidi-sg"
            },
            "tags_all": {
              "Name": "haidi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002a5ec6001bf7a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.haidi-vpc",
            "module.myip.data.http.ip_address"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "haidi-sn-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:214138175513:subnet/subnet-0409154b521451ada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0409154b521451ada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214138175513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "haidi-sn-dmz"
            },
            "tags_all": {
              "Name": "haidi-sn-dmz"
            },
            "vpc_id": "vpc-002a5ec6001bf7a8f"
          },
          "dependencies": [
            "aws_vpc.haidi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "haidi-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:214138175513:vpc/vpc-002a5ec6001bf7a8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05ebd98d885a9cd34",
            "default_route_table_id": "rtb-0103fae5e6cd861cd",
            "default_security_group_id": "sg-0fde3092256d469a6",
            "dhcp_options_id": "dopt-05c94b863e819a39c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002a5ec6001bf7a8f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0103fae5e6cd861cd",
            "owner_id": "214138175513",
            "tags": {
              "Name": "haidi-vpc"
            },
            "tags_all": {
              "Name": "haidi-vpc"
            }
          }
        }
      ]
    }
  ]
}